# lasyregex

./: README.md  pyproject.toml
lazyregex/: main.py
lazyregex/css/: regex_search.css
