
[project]
name = "lasyregex"
version = "0.1.0"
description = "TUI de ferramentas para regex"

authors = [
    {name = "Bruno Davi", email = "48166556+brunodavi@users.noreply.github.com"},
]

dependencies = [
    "textual[dev]>=0.28.1",
]

requires-python = ">=3.7"
readme = "README.md"
license = {text = "GNU"}


[project.scripts]
lasyregex = "lasyregex.main:main"

[tool.pdm.scripts]
test = 'pytest'

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
